--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,9 @@ filelock==3.18.0
 Flask==3.1.0
 Flask-Caching==2.3.1
 Flask-Cors==3.0.10
+Flask-Login==0.6.3
 Flask-RQ2==18.3
+Flask-SQLAlchemy==3.1.1
 freezegun==1.5.1
 fsspec==2025.3.0
 git-filter-repo==2.47.0
@@ -59,6 +61,7 @@ setuptools==78.1.0
 sgmllib3k==1.0.0
 six==1.17.0
 sniffio==1.3.1
+SQLAlchemy==2.0.41
 sympy==1.13.1
 threadpoolctl==3.6.0
 tokenizers==0.15.2
