--- a/requirements.txt
+++ b/requirements.txt
@@ -79,3 +79,6 @@ postmarker==1.0
 lxml[html_clean]>=4.9.3
 newspaper3k>=0.2.8
 aiohttp==3.9.5
+uszipcode==1.0.1
+beautifulsoup4>=4.12.2
+nltk>=3.8.1
