--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,29 @@
-annotated-types==0.7.0
-anyio==4.9.0
-APScheduler==3.11.0
-black==25.1.0
-blinker==1.9.0
-cachelib==0.13.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
-crontab==1.0.1
-distro==1.9.0
-feedparser==6.0.11
-filelock==3.18.0
+# Web + ORM
 Flask==3.1.0
-Flask-Caching==2.3.1
-Flask-Cors==3.0.10
-Flask-Login==0.6.3
-Flask-RQ2==18.3
 Flask-SQLAlchemy==3.1.1
-freezegun==1.5.1
-fsspec==2025.3.0
-git-filter-repo==2.47.0
-gunicorn==23.0.0
-h11==0.14.0
-hf-xet==1.0.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.30.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jiter==0.9.0
-joblib==1.4.2
-MarkupSafe==3.0.2
-memory-profiler==0.61.0
-mpmath==1.3.0
-mypy-extensions==1.0.0
-networkx==3.4.2
-numpy==2.2.4
-openai==1.72.0
-packaging==24.2
-pandas==2.2.3
-pathspec==0.12.1
-platformdirs==4.3.7
-psutil==7.0.0
-pydantic==2.11.3
-pydantic_core==2.33.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-redis==5.2.1
-regex==2024.11.6
-requests==2.31.0
-rq==2.3.1
-rq-scheduler==0.14.0
-safetensors==0.5.3
-scikit-learn==1.6.1
-scipy==1.15.2
-setuptools==78.1.0
-sgmllib3k==1.0.0
-six==1.17.0
-sniffio==1.3.1
+Flask-Login==0.6.3
 SQLAlchemy==2.0.41
-sympy==1.13.1
-threadpoolctl==3.6.0
-tokenizers==0.15.2
-torch==2.6.0
-tqdm==4.67.1
-transformers==4.38.2
-typing-inspection==0.4.0
-typing_extensions==4.13.0
-tzdata==2025.2
-tzlocal==5.3.1
-urllib3==2.3.0
 Werkzeug==3.1.3
-psycopg2-binary>=2.9
-postmarker==1.0
-lxml[html_clean]>=4.9.3
-newspaper3k>=0.2.8
-aiohttp==3.9.5
-beautifulsoup4>=4.12.2
-nltk>=3.8.1
-pgeocode==0.5.0
-flask
-beautifulsoup4
-openai
+Jinja2==3.1.6
+gunicorn==23.0.0
+
+# Content & parsing
+markdown2==2.5.1
+requests>=2.31.0,<3
+unidecode==1.3.8
+rapidfuzz==3.9.7
+
+# Schedulers, time
+APScheduler==3.11.0
+pytz==2025.2
+tzlocal==5.3.1
+
+# Reddit + OpenAI
 praw==7.7.1
-apscheduler
-python-dotenv
-markdown==3.6
-unidecode
-markdown2
-tweepy
-pytrends
-feedparser
-SQLAlchemy
-psycopg2-binary
-pandas
-scikit-learn
-python-dotenv
+openai>=1.50.0,<2
+
+# DB driver (Neon/Postgres)
+psycopg2-binary>=2.9
+
+# Optional utilities
+python-dotenv==1.1.0
